--- a/App.config
+++ b/App.config
@@ -10,6 +10,7 @@
   <connectionStrings>
     <add name="KVANTORIUMEntities" connectionString="metadata=res://*/BDKVANT.csdl|res://*/BDKVANT.ssdl|res://*/BDKVANT.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-B0UFU5C\SQLEXPRESS;initial catalog=KVANTORIUM;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="KVANTORIUMEntities1" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-B0UFU5C\SQLEXPRESS;initial catalog=KVANTORIUM;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="KVANTORIUMEntities2" connectionString="metadata=res://*/MODEL.csdl|res://*/MODEL.ssdl|res://*/MODEL.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-B0UFU5C\SQLEXPRESS;initial catalog=KVANTORIUM;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
