--- a/KVANTORIUM.csproj
+++ b/KVANTORIUM.csproj
@@ -61,41 +61,50 @@
     <Compile Include="KONTAKT.Designer.cs">
       <DependentUpon>KONTAKT.cs</DependentUpon>
     </Compile>
-    <Compile Include="KURS.cs">
-      <DependentUpon>Model.tt</DependentUpon>
-    </Compile>
     <Compile Include="menu.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="menu.Designer.cs">
       <DependentUpon>menu.cs</DependentUpon>
     </Compile>
-    <Compile Include="Model.Context.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Model.Context.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Model.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Model.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Model.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Model.edmx</DependentUpon>
-    </Compile>
-    <Compile Include="PREPOD.cs">
+    <Compile Include="G:\пс-10\PREPOD.cs">
       <DependentUpon>Model.tt</DependentUpon>
       <SubType>Form</SubType>
+      <Link>PREPOD.cs</Link>
     </Compile>
-    <Compile Include="PREPOD.Designer.cs">
+    <Compile Include="G:\пс-10\PREPOD.Designer.cs">
       <DependentUpon>PREPOD.cs</DependentUpon>
+      <Link>PREPOD.Designer.cs</Link>
+    </Compile>
+    <Compile Include="MODEL.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>MODEL.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="MODEL.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>MODEL.tt</DependentUpon>
+    </Compile>
+    <Compile Include="MODEL.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>MODEL.edmx</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="USINIK.cs">
-      <DependentUpon>Model.tt</DependentUpon>
+      <DependentUpon>MODEL.tt</DependentUpon>
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="USINIK.Designer.cs">
+      <DependentUpon>USINIK.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Usunik.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Usunik.Designer.cs">
+      <DependentUpon>Usunik.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="KONTAKT.resx">
       <DependentUpon>KONTAKT.cs</DependentUpon>
@@ -103,20 +112,24 @@
     <EmbeddedResource Include="menu.resx">
       <DependentUpon>menu.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="PREPOD.resx">
+    <EmbeddedResource Include="G:\пс-10\PREPOD.resx">
       <DependentUpon>PREPOD.cs</DependentUpon>
+      <Link>PREPOD.resx</Link>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <EntityDeploy Include="Model.edmx">
+    <EmbeddedResource Include="USINIK.resx">
+      <DependentUpon>USINIK.cs</DependentUpon>
+    </EmbeddedResource>
+    <EntityDeploy Include="MODEL.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>Model.Designer.cs</LastGenOutput>
+      <LastGenOutput>MODEL.Designer.cs</LastGenOutput>
     </EntityDeploy>
-    <None Include="Model.edmx.diagram">
-      <DependentUpon>Model.edmx</DependentUpon>
+    <None Include="MODEL.edmx.diagram">
+      <DependentUpon>MODEL.edmx</DependentUpon>
     </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
@@ -144,15 +157,15 @@
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Model.Context.tt">
+    <Content Include="MODEL.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>Model.edmx</DependentUpon>
-      <LastGenOutput>Model.Context.cs</LastGenOutput>
+      <DependentUpon>MODEL.edmx</DependentUpon>
+      <LastGenOutput>MODEL.Context.cs</LastGenOutput>
     </Content>
-    <Content Include="Model.tt">
+    <Content Include="MODEL.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>Model.edmx</DependentUpon>
-      <LastGenOutput>Model.cs</LastGenOutput>
+      <DependentUpon>MODEL.edmx</DependentUpon>
+      <LastGenOutput>MODEL.cs</LastGenOutput>
     </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
