--- a/KVANTORIUM.csproj
+++ b/KVANTORIUM.csproj
@@ -76,30 +76,8 @@
       <DependentUpon>PREPOD.cs</DependentUpon>
       <Link>PREPOD.Designer.cs</Link>
     </Compile>
-    <Compile Include="MODEL.Context.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>MODEL.Context.tt</DependentUpon>
-    </Compile>
-    <Compile Include="MODEL.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>MODEL.tt</DependentUpon>
-    </Compile>
-    <Compile Include="MODEL.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>MODEL.edmx</DependentUpon>
-    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="USINIK.cs">
-      <DependentUpon>MODEL.tt</DependentUpon>
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="USINIK.Designer.cs">
-      <DependentUpon>USINIK.cs</DependentUpon>
-    </Compile>
     <Compile Include="Usunik.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -121,16 +99,9 @@
       <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <EmbeddedResource Include="USINIK.resx">
-      <DependentUpon>USINIK.cs</DependentUpon>
+    <EmbeddedResource Include="Usunik.resx">
+      <DependentUpon>Usunik.cs</DependentUpon>
     </EmbeddedResource>
-    <EntityDeploy Include="MODEL.edmx">
-      <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>MODEL.Designer.cs</LastGenOutput>
-    </EntityDeploy>
-    <None Include="MODEL.edmx.diagram">
-      <DependentUpon>MODEL.edmx</DependentUpon>
-    </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -155,18 +126,6 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="MODEL.Context.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>MODEL.edmx</DependentUpon>
-      <LastGenOutput>MODEL.Context.cs</LastGenOutput>
-    </Content>
-    <Content Include="MODEL.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>MODEL.edmx</DependentUpon>
-      <LastGenOutput>MODEL.cs</LastGenOutput>
-    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
